feat: 侧边栏菜单渲染

--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -44,314 +44,7 @@
     "order.detail": "订单详情",
     "settings": "设置",
     "withdraw": "提现",
-    "accountDetail": "账户详情"
-  },
-  "dashboard": {
-    "exchangeRate": {
-      "title": "查看汇率",
-      "subtitle": "您可以查看当前汇率和历史汇率。",
-      "currentSellingPrice": "当前卖出价",
-      "currentBuyingPrice": "当前买入价",
-      "historyRate": "历史汇率",
-      "createdTime": "创建时间",
-      "createdBy": "创建人"
-    },
-    "changeExchangeRate": {
-      "title": "修改汇率",
-      "subtitle": "您可以输入金额并更新汇率。",
-      "iWillBeSent": "我将发送",
-      "beneficiaryWillGet": "收款方将收到",
-      "exchangeRateWillChange": "汇率将变更为",
-      "confirmToChange": "确认修改",
-      "rateExceedMax": "汇率不能大于 99,999,999",
-      "rateBelowMin": "汇率不能小于 1",
-      "confirmTitle": "确认修改",
-      "confirmSellingContent": "您确定要将卖出价格修改为 1 USD = {{rate}} {{currency}} 吗？",
-      "confirmBuyingContent": "您确定要将买入价格修改为 1 USD = {{rate}} {{currency}} 吗？",
-      "changeSuccess": "汇率修改成功",
-      "rateChangeExceedWarning": "警告：与之前的汇率相比，汇率变动超过了10%。"
-    },
-    "balance": {
-      "title": "余额",
-      "subtitle": "查看和管理您的余额",
-      "availableBalance": "可用余额",
-      "fund": "充值",
-      "withdraw": "提现",
-      "initialize": "开通",
-      "fundCashPosition": "充值现金头寸",
-      "accountInitialization": "账户开通",
-      "accountInformation": "账户信息",
-      "transferTip": "请将 {{currency}} 转入此账户以充值您的现金头寸",
-      "initializeConfirm": "请确认开通您的 {{currency}} 头寸账户，银行：",
-      "openAccountSuccess": "成功开通 {{bank}} 银行的 {{currency}} 账户！",
-      "openAccountFailed": "开通 {{currency}} 账户失败，请重试！",
-      "statement": "流水",
-      "copiedToClipboard": "{{field}} 已复制到剪贴板",
-      "rechargeNoteReminder": "请将此信息添加到交易备注中",
-      "field": {
-        "accountName": "账户名称",
-        "accountNumber": "账户号码",
-        "bankName": "银行名称",
-        "bankAddress": "银行地址",
-        "branchCode": "分行代码",
-        "accountType": "账户类型",
-        "bankCode": "银行代码",
-        "swiftCode": "SWIFT 代码",
-        "routingNumber": "路由号码",
-        "note": "备注"
-      },
-      "column": {
-        "orgFlowNo": "流水单号",
-        "gmtCreated": "创建时间",
-        "transTypeName": "交易类型",
-        "ccy": "币种",
-        "amount": "交易金额",
-        "orgSubFlowNo": "子流水单号"
-      }
-    }
-  },
-  "changePasswordModal": {
-    "uppercaseOrLowercaseLetters": "大写或小写字母",
-    "numbers": "包含数字",
-    "passwordLength": "最少8个字符，最多20个字符",
-    "title": "更改密码",
-    "triggerButton": "修改密码",
-    "originalPassword": "原始密码",
-    "originalPasswordPlaceholder": "请输入原始密码",
-    "newPassword": "新密码",
-    "newPasswordPlaceholder": "请输入新密码",
-    "confirmPassword": "确认密码",
-    "confirmPasswordPlaceholder": "请输入确认密码",
-    "confirmPasswordNotMatch": "确认密码与新密码不匹配"
-  },
-  "order": {
-    "orderID": "订单 ID",
-    "sellingCurrency": "出售货币",
-    "sellingAmount": "销售金额",
-    "buyingCurrency": "购买货币",
-    "buyingAmount": "购买金额",
-    "fxRate": "汇率",
-    "sellingAccountChannel": "销售账户渠道",
-    "exchangeStatus": "状态",
-    "orderTime": "下单时间",
-    "updateTime": "更新时间",
-    "operation": "操作",
-    "positionDeductionWarning": "{{channelName}}: {{orderNum}} 笔 FX 订单（价值 {{amount}} USD）处于\"待扣除持仓\"状态；请及时为您的现金持仓账户充值",
-    "statusToBeConfirmed": "待确认",
-    "statusRejected": "已拒绝",
-    "statusMoneyTransferring": "转账中",
-    "statusMoneyTransferringFailed": "转账失败",
-    "statusPositionToBeDeducted": "待扣除持仓",
-    "statusSuccessfulOrder": "订单成功",
-    "statusOrderClosed": "订单已关闭",
-    "feeCurrency": "手续费货币",
-    "feeAmount": "手续费金额",
-    "deductedCurrency": "扣除货币",
-    "deductedAmount": "扣除金额",
-    "operationTime": "操作时间",
-    "operationBy": "操作人",
-    "orderInfo": "订单信息",
-    "operationLog": "操作日志",
-    "status": "状态",
-    "reason": "原因",
-    "reasonOfRejection": "拒绝原因",
-    "pleaseEnterRejectionReason": "请输入拒绝原因",
-    "buyAmountZAR": "购买金额",
-    "sellAmountZAR": "出售金额",
-    "pleaseEnterSellAmount": "请输入出售金额",
-    "rate": "汇率",
-    "accept": "接受",
-    "reject": "拒绝",
-    "confirmOrder": "确认订单",
-    "orderRejectedSuccess": "订单已成功拒绝",
-    "orderAcceptedSuccess": "订单已成功接受",
-    "acceptOrderConfirmTitle": "您确定要接受订单吗？确认后无法更改。",
-    "acceptOrderSteps": "接受后的步骤：",
-    "acceptOrderStep1": "接受订单后，出售资金将从您的现金持仓账户中扣除；",
-    "acceptOrderStep2": "请确保您的现金持仓账户有足够的资金",
-    "rejectOrderConfirm": "您确定要<highlight>拒绝</highlight>订单吗？确认后无法更改。",
-    "pendingOrdersWarningPrefix": "您有",
-    "pendingOrdersWarningSuffix": "笔订单待关联交易记录，请确认",
-    "confirmPendingOrders": "确认待关联订单",
-    "associate": "关联",
-    "statusUnassociated": "未关联",
-    "unassociatedStatement": "未关联流水",
-    "createTime": "创建时间",
-    "recipientSender": "收/付人",
-    "currency": "币种",
-    "beginningBalance": "期初余额",
-    "closingBalance": "期末余额",
-    "selectedItemCount": "已选择 {{count}} 条"
-  },
-  "payInPayOutOrder": {
-    "search": {
-      "orderId": "订单 ID",
-      "status": "状态",
-      "orderCurrency": "订单币种",
-      "orderType": "订单类型"
-    },
-    "transferStatus": {
-      "transferProcessing": "处理中",
-      "transferSuccess": "成功",
-      "transferFailed": "失败"
-    },
-    "tradeType": {
-      "exchange": "换汇",
-      "recharge": "充值",
-      "withdraw": "提现",
-      "transfer": "转账",
-      "unionBankMoneyIn": "收款入金",
-      "refundMoneyIn": "退款入金",
-      "exchangeMoneyOut": "换汇出金",
-      "earnestMoneyIn": "保证金"
-    },
-    "table": {
-      "createTime": "创建时间",
-      "updateTime": "更新时间",
-      "orderId": "订单 ID",
-      "senderRecipient": "收/付人",
-      "transactionType": "交易类型",
-      "orderCurrency": "订单币种",
-      "orderAmount": "订单金额",
-      "receiveAmount": "到账金额",
-      "status": "订单状态"
-    }
-  },
-  "settings": {
-    "password": {
-      "title": "更改登录密码",
-      "setNewPassword": "设置新密码"
-    },
-    "tab": {
-      "password": "登录密码",
-      "payment": "支付密码"
-    },
-    "payment": {
-      "title": "设置支付密码",
-      "unInitializedDescription": "请设置6位数字支付密码，该密码将用于交易授权",
-      "initializedDescription": "您可以点击下方按钮更改或找回您的支付密码",
-      "pin": "支付密码",
-      "pinPlaceholder": "请输入6位数字支付密码",
-      "confirmPin": "确认支付密码",
-      "confirmPinPlaceholder": "请再次输入6位数字支付密码",
-      "pinNotMatch": "两次输入的密码不一致",
-      "pinInvalid": "请输入6位数字",
-      "setSuccess": "支付密码设置成功",
-      "retrieveSuccess": "支付密码找回成功",
-      "originalPin": "原始支付密码",
-      "forgotPin": "忘记支付密码？",
-      "originalPinPlaceholder": "请输入原始支付密码",
-      "newPin": "新支付密码",
-      "newPinPlaceholder": "请输入新支付密码",
-      "confirmNewPin": "确认新支付密码",
-      "confirmNewPinPlaceholder": "请再次输入新支付密码",
-      "changePinTitle": "修改支付密码",
-      "changePinButton": "修改支付密码",
-      "retrievePinTitle": "找回支付密码",
-      "forgotPinButton": "忘记支付密码"
-    }
-  },
-  "biz": {
-    "emailVerification": {
-      "title": "邮箱验证",
-      "description": "请提供发送到此邮箱地址的验证码",
-      "otpLabel": "邮箱验证码",
-      "otpPlaceholder": "请输入",
-      "otpExpiresIn": "验证码将在",
-      "seconds": " 秒后过期",
-      "otpInvalid": "请输入6位验证码",
-      "refreshOtp": "刷新验证码",
-      "otpSent": "验证已成功发送"
-    },
-    "successModal": {
-      "title": "提交结果提示",
-      "successTitle": "提交成功",
-      "description": "交易请求已提交，请等待审核结果",
-      "failureTitle": "提交失败",
-      "failureDescription": "原因：{{reason}}"
-    }
-  },
-  "withdraw": {
-    "queryFilter": {
-      "bankName": "银行名称",
-      "bankNamePlaceholder": "请输入",
-      "accountName": "账户名称",
-      "accountNamePlaceholder": "请输入",
-      "accountNumber": "账户号码",
-      "accountNumberPlaceholder": "请输入"
-    },
-    "form": {
-      "payoutAccountTitle": "付款账户",
-      "amount": "金额",
-      "availableBalance": "可用余额：",
-      "recipientAccountTitle": "收款账户",
-      "remarks": "备注（可选）",
-      "remarksPlaceholder": "请输入",
-      "next": "下一步",
-      "error1": "金额超过可用余额",
-      "error2": "金额不能小于100 {{currency}}",
-      "error3": "金额不能超过{{amount}} {{currency}}",
-      "error4": "请输入金额"
-    },
-    "accountSelector": {
-      "addRecipientAccount": "添加收款账户",
-      "noRecords": "暂无数据"
-    },
-    "paymentConfirmation": {
-      "title": "支付确认",
-      "recipientAccount": "收款账户",
-      "amountInformation": "金额信息",
-      "amount": "金额",
-      "estimatedAmountToReceive": "预计收款金额",
-      "estimatedAmountTooltip": "预计收款金额 = 金额 - 服务费（如适用）- 电汇费（如适用）",
-      "paymentNotification": "实际支付时间和金额以收款银行通知为准。"
-    }
-  },
-  "accountDetail": {
-    "form": {
-      "title": "添加银行账户",
-      "accountType": "账户类型",
-      "accountTypePlaceholder": "请选择",
-      "currency": "货币",
-      "currencyPlaceholder": "请选择",
-      "accountName": "账户名称",
-      "accountNamePlaceholder": "请输入",
-      "accountNumber": "账户号码",
-      "accountNumberPlaceholder": "请输入",
-      "bankName": "银行名称",
-      "bankNamePlaceholder": "请输入",
-      "countryRegion": "账户所在国家/地区",
-      "countryRegionPlaceholder": "请输入",
-      "bankAddress": "银行地址",
-      "bankAddressPlaceholder": "请输入",
-      "swift": "SWIFT",
-      "swiftPlaceholder": "请输入",
-      "iban": "IBAN",
-      "ibanPlaceholder": "欧洲银行账户必填（包括英国）",
-      "bsbNumber": "BSB 号码",
-      "bsbNumberPlaceholder": "澳大利亚银行账户必填",
-      "routingNumber": "路由号码",
-      "routingNumberPlaceholder": "美国银行账户必填",
-      "recipientAddress": "收款人地址",
-      "countryPlaceholder": "选择国家/地区",
-      "payeeProvince": "省",
-      "payeeProvincePlaceholder": "输入省份",
-      "payeeCity": "市",
-      "payeeCityPlaceholder": "输入城市",
-      "cityPlaceholder": "请选择",
-      "addressPlaceholder": "请输入详细地址",
-      "postCode": "邮编",
-      "postCodePlaceholder": "请输入",
-      "cooperationAgreement": "合作协议",
-      "accountOpeningCertificate": "开户证明",
-      "accountOpeningCertificateExtra": "注：请提供银行开户证明。",
-      "submit": "提交",
-      "submitSuccess": "银行账户添加成功"
-    },
-    "enum": {
-      "accountType": {
-        "companyAccount": "公司账户"
-      }
-    }
+    "accountDetail": "账户详情",
+    "about": "关于"
   }
 }
