feat: add demo page

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -45,6 +45,7 @@
     "settings": "Settings",
     "withdraw": "Withdraw",
     "accountDetail": "Account Detail",
-    "about": "About"
+    "about": "About",
+    "demo": "Demo"
   }
 }
