--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -45,6 +45,7 @@
     "settings": "设置",
     "withdraw": "提现",
     "accountDetail": "账户详情",
-    "about": "关于"
+    "about": "关于",
+    "demo": "演示"
   }
 }
