--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -66,6 +66,7 @@
     "withdraw": "提现",
     "accountDetail": "账户详情",
     "about": "关于",
-    "demo": "演示"
+    "demo": "演示",
+    "biz-demo": "业务演示"
   }
 }
